--- a/layouts/partials/modals.html
+++ b/layouts/partials/modals.html
@@ -15,7 +15,7 @@
                     <div class="modal-body">
                         <h2>{{ $work.title }}</h2>
                         <hr class="star-primary">
-                        <img src="img/portfolio/{{ $work.img }}" class="img-responsive img-centered" alt="">
+                        <!-- <img src="img/portfolio/{{ $work.img }}" class="img-responsive img-centered" alt=""> -->
                         <p>{{ $work.description | markdownify }}</p>
                         <ul class="list-inline item-details">
                             <li>{{ with $.Site.Params.portfolio.modal.client }}{{.}}{{ end }}:
