--- a/static/css/freelancer.css
+++ b/static/css/freelancer.css
@@ -278,7 +278,7 @@ section.success a.active {
     width: 100%;
     height: 100%;
     opacity: 0;
-    background: var(--highlight-1);
+    background: var(--highlight-2);
     -webkit-transition: all ease .5s;
     -moz-transition: all ease .5s;
     transition: all ease .5s;
@@ -297,6 +297,7 @@ section.success a.active {
     text-align: center;
     font-size: 20px;
     color: var(--darker-color);
+    font-weight: bolder;
 }
 
 #portfolio .portfolio-item .portfolio-link .caption .caption-content i {
