--- a/docs/css/freelancer.css
+++ b/docs/css/freelancer.css
@@ -278,7 +278,7 @@ section.success a.active {
     width: 100%;
     height: 100%;
     opacity: 0;
-    background: var(--highlight-1);
+    background: var(--highlight-2);
     -webkit-transition: all ease .5s;
     -moz-transition: all ease .5s;
     transition: all ease .5s;
@@ -292,11 +292,14 @@ section.success a.active {
     position: absolute;
     top: 50%;
     width: 100%;
-    height: 20px;
-    margin-top: -12px;
+    height: 20em;
+    margin-top: -4em;
+    padding-left: 4px;
+    padding-right: 4px;
     text-align: center;
-    font-size: 20px;
+    font-size: 12px;
     color: var(--darker-color);
+    font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
 }
 
 #portfolio .portfolio-item .portfolio-link .caption .caption-content i {
