--- a/static/css/freelancer.css
+++ b/static/css/freelancer.css
@@ -292,12 +292,14 @@ section.success a.active {
     position: absolute;
     top: 50%;
     width: 100%;
-    height: 20px;
-    margin-top: -12px;
+    height: 20em;
+    margin-top: -4em;
+    padding-left: 4px;
+    padding-right: 4px;
     text-align: center;
-    font-size: 20px;
+    font-size: 12px;
     color: var(--darker-color);
-    font-weight: bolder;
+    font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
 }
 
 #portfolio .portfolio-item .portfolio-link .caption .caption-content i {
